removed de2 profile

--- a/pipeline/solutions/extract_edits_solution.ipynb
+++ b/pipeline/solutions/extract_edits_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "\n",
     "# The next line is only relevant for courseware development, please ignore it \n",
     "# and leave it commented out when working on this notebook\n",
-    "boto3.setup_default_session(profile_name=\"de2\", region_name=\"eu-west-1\")\n"
+    "# boto3.setup_default_session(profile_name=\"de2\", region_name=\"eu-west-1\")\n"
    ]
   },
   {
